--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
-        "nodemon": "^2.0.16"
+        "@types/ws": "^8.5.3",
+        "nodemon": "^1.3.3",
+        "typescript": "^4.7.4"
     },
     "dependencies": {
-        "jimp": "^0.16.1",
+        "jimp": "^0.16.0",
         "robotjs": "^0.6.0",
         "ws": "^8.8.0"
     }
