--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
     "name": "ws_task",
     "version": "1.0.0",
     "description": "Template for the WebSocket remote control task",
-    "main": "index.js",
-    "type": "module",
+    "main": "dist/index.js",
     "scripts": {
-        "start": "node ./index.js",
-        "start:dev": "nodemon ./index.js",
+        "start": "node ./dist/index.js",
+        "start:dev": "nodemon ./index.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Andrei Auchynnikau",
     "keywords": [],
     "license": "ISC",
     "devDependencies": {
+        "@types/node": "^18.0.0",
         "@types/ws": "^8.5.3",
         "nodemon": "^1.3.3",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "ts-node": "^10.8.1"
     },
     "dependencies": {
         "jimp": "^0.16.0",
